modified:   .eslintrc.json  	modified:   .firebase/hosting.LmZpcmViYXNlXHdvb2R3b3Jrcy1mY2M2MFxob3N0aW5n.cache  	modified:   .firebase/woodworks-fcc60/hosting/404.html  	renamed:    .firebase/woodworks-fcc60/hosting/_next/static/N6knPnOZXcE_67AS-8Hmk/_buildManifest.js -> .firebase/woodworks-fcc60/hosting/_next/static/F5oB4JsxshTtyemtHBnCO/_buildManifest.js  	renamed:    .firebase/woodworks-fcc60/hosting/_next/static/N6knPnOZXcE_67AS-8Hmk/_ssgManifest.js -> .firebase/woodworks-fcc60/hosting/_next/static/F5oB4JsxshTtyemtHBnCO/_ssgManifest.js  	renamed:    .firebase/woodworks-fcc60/hosting/_next/static/chunks/155-6e0d0cefe702172a.js -> .firebase/woodworks-fcc60/hosting/_next/static/chunks/155-f37c77c8c0d21d5f.js  	renamed:    .firebase/woodworks-fcc60/hosting/_next/static/chunks/250-7bad6d9a89ef30e8.js -> .firebase/woodworks-fcc60/hosting/_next/static/chunks/250-d7236eb889c557b2.js  	new file:   .firebase/woodworks-fcc60/hosting/_next/static/chunks/334-c469ef2c0a259588.js  	renamed:    .firebase/woodworks-fcc60/hosting/_next/static/chunks/69-6cd6c400714a4030.js -> .firebase/woodworks-fcc60/hosting/_next/static/chunks/69-0f3859af50b1f0ea.js  	renamed:    .firebase/woodworks-fcc60/hosting/_next/static/chunks/app/_not-found-56d4381bee306a6c.js -> .firebase/woodworks-fcc60/hosting/_next/static/chunks/app/_not-found-fb55a2204431ae85.js  	new file:   .firebase/woodworks-fcc60/hosting/_next/static/chunks/app/admin/page-f1575d75f909606d.js  	deleted:    .firebase/woodworks-fcc60/hosting/_next/static/chunks/app/layout-7c6d94bbc2a226fc.js  	new file:   .firebase/woodworks-fcc60/hosting/_next/static/chunks/app/layout-f73e3751ed48c463.js  	renamed:    .firebase/woodworks-fcc60/hosting/_next/static/chunks/app/page-535e1e1c88569589.js -> .firebase/woodworks-fcc60/hosting/_next/static/chunks/app/page-330632fdafe1ed04.js  	new file:   .firebase/woodworks-fcc60/hosting/_next/static/chunks/app/product/page-df9b357f85f6c50a.js  	deleted:    .firebase/woodworks-fcc60/hosting/_next/static/c

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "@next/next/no-img-element": "off" // Disable the rule that requires width and height for <Image>
+  }
 }
