modified:   .eslintrc.json 	modified:   app/about/page.tsx 	modified:   app/components/Footer.tsx 	modified:   app/components/Navbar.tsx 	modified:   app/contact/page.tsx 	modified:   app/favicon.ico 	modified:   app/page.tsx 	modified:   app/product/page.tsx 	deleted:    firebase-debug.log 	modified:   next.config.js 	renamed:    public/logo-white.svg -> public/favicon.ico 	new file:   public/q1bT9H3pfR9zA6uOtkDSb_x2CXWNrob6SCqm9a4KsvVftnivlu5SeaoErfIK_CaP

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    "@next/next/no-img-element": "off" // Disable the rule that requires width and height for <Image>
+    "@next/next/no-img-element": "off", // Disable the rule that requires width and height for <Image>
+    "react-hooks/rules-of-hooks": "off", // Disable the rule that enforces hook rules
+    "react-hooks/exhaustive-deps": "off" // Disable the rule that enforces exhaustive dependencies
   }
 }
