--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "14.1.4",
     "firebase": "^10.9.0",
     "framer-motion": "^11.0.20",
+    "nanoid": "^5.0.7",
     "next": "14.1.4",
     "postcss": "8.4.38",
     "react": "^18.2.0",
