--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
     "firebase": "^10.9.0",
+    "firebase-functions": "^5.0.1",
     "framer-motion": "^11.0.20",
     "nanoid": "^5.0.7",
     "next": "14.1.4",
